--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>User Page</title>
+	<link rel="icon" type="image/x-icon" th:href="@{/img/Happy-favicon.png}" href="/src/main/resources/static/img/Happy-favicon.png">
 	<!-- Bootsrapt -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
@@ -129,49 +130,167 @@
 				<!-- User Tablo -->
 				<div class="user-insurances-admin">
 					<div class="card mb-4">
-						<table class="table">
-							<thead>
-								<tr>
-									<th scope="col">Id</th>
-									<th scope="col">TC</th>
-									<th scope="col">Birth Date</th>
-									<th scope="col">Email</th>
-									<th scope="col">First Name</th>
-									<th cope="col">Last Name</th>
-									<th cope="col">Province</th>
-									<th cope="col">District</th>
-									<th scope="col">Insurance Type</th>
-									<th scope="col">Update</th>
-									<th scope="col">Delete</th>
-									<th scope="col">See User Details </th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr th:each="c :${customer}">
-									<td th:text="${c.customerId}"></td>
-									<td th:text="${c.tc}"></td>
-									<td style="width: 112px;" th:text="${c.birth}"></td>
-									<td th:text="${c.email}"></td>
-									<td th:text="${c.firstname}"></td>
-									<td th:text="${c.lastname}"></td>
-									<td th:text="${c.province}"></td>
-									<td th:text="${c.district}"></td>
-									<td><a th:href="@{/selectType(customerId=${c.customerId})}"><span
-												class="badge text-bg-primary">Add New Insurance</span></a></td>
-									<td><button class="mx-auto"><a
-												th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i
-													class="bx bxs-edit edit"></i></a></button></td>
-									<td><button class="mx-auto"><a
-												th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i
-													class="bx bx-trash trash"></i></a></button></td>
-									<td><button class="mx-auto">
-											<a th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
-												<i class='bx bx-dots-horizontal-rounded dots'></i>
-											</a>
-										</button></td>
-								</tr>
-							</tbody>
-						</table>
+						<ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="health-tab" data-bs-toggle="tab"
+            data-bs-target="#health-tab-pane" type="button" role="tab"
+            aria-controls="health-tab-pane" aria-selected="true">All Customer</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="home-tab" data-bs-toggle="tab"
+            data-bs-target="#home-tab-pane" type="button" role="tab"
+            aria-controls="home-tab-pane" aria-selected="false">All Insurance</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="car-tab" data-bs-toggle="tab"
+            data-bs-target="#car-tab-pane" type="button" role="tab" aria-controls="car-tab-pane"
+            aria-selected="false">All Company</button>
+    </li>
+</ul>
+<div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="health-tab-pane" role="tabpanel"
+        aria-labelledby="health-tab" tabindex="0">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">TC</th>
+                    <th scope="col">Birth Date</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">First Name</th>
+                    <th cope="col">Last Name</th>
+                    <th cope="col">Province</th>
+                    <th cope="col">District</th>
+                    <th scope="col">Insurance Type</th>
+                    <th scope="col">Update</th>
+                    <th scope="col">Delete</th>
+                    <th scope="col">See User Details </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="c :${customer}">
+                    <td th:text="${c.customerId}"></td>
+                    <td th:text="${c.tc}"></td>
+                    <td style="width: 112px;" th:text="${c.birth}"></td>
+                    <td th:text="${c.email}"></td>
+                    <td th:text="${c.firstname}"></td>
+                    <td th:text="${c.lastname}"></td>
+                    <td th:text="${c.province}"></td>
+                    <td th:text="${c.district}"></td>
+                    <td><a th:href="@{/selectType(customerId=${c.customerId})}"><span
+                                class="badge text-bg-primary">Add New Insurance</span></a></td>
+                    <td><button class="mx-auto"><a
+                                th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i
+                                    class="bx bxs-edit edit"></i></a></button></td>
+                    <td><button class="mx-auto"><a
+                                th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i
+                                    class="bx bx-trash trash"></i></a></button></td>
+                    <td><button class="mx-auto">
+                            <a th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
+                                <i class='bx bx-dots-horizontal-rounded dots'></i>
+                            </a>
+                        </button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="tab-pane fade" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
+        tabindex="0">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">TC</th>
+                    <th scope="col">Birth Date</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">First Name</th>
+                    <th cope="col">Last Name</th>
+                    <th cope="col">Province</th>
+                    <th cope="col">District</th>
+                    <th scope="col">Insurance Type</th>
+                    <th scope="col">Update</th>
+                    <th scope="col">Delete</th>
+                    <th scope="col">See User Details </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="c :${customer}">
+                    <td th:text="${c.customerId}"></td>
+                    <td th:text="${c.tc}"></td>
+                    <td style="width: 112px;" th:text="${c.birth}"></td>
+                    <td th:text="${c.email}"></td>
+                    <td th:text="${c.firstname}"></td>
+                    <td th:text="${c.lastname}"></td>
+                    <td th:text="${c.province}"></td>
+                    <td th:text="${c.district}"></td>
+                    <td><a th:href="@{/selectType(customerId=${c.customerId})}"><span
+                                class="badge text-bg-primary">Add New Insurance</span></a></td>
+                    <td><button class="mx-auto"><a
+                                th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i
+                                    class="bx bxs-edit edit"></i></a></button></td>
+                    <td><button class="mx-auto"><a
+                                th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i
+                                    class="bx bx-trash trash"></i></a></button></td>
+                    <td><button class="mx-auto">
+                            <a th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
+                                <i class='bx bx-dots-horizontal-rounded dots'></i>
+                            </a>
+                        </button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="tab-pane fade" id="car-tab-pane" role="tabpanel" aria-labelledby="car-tab"
+        tabindex="0">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">TC</th>
+                    <th scope="col">Birth Date</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">First Name</th>
+                    <th cope="col">Last Name</th>
+                    <th cope="col">Province</th>
+                    <th cope="col">District</th>
+                    <th scope="col">Insurance Type</th>
+                    <th scope="col">Update</th>
+                    <th scope="col">Delete</th>
+                    <th scope="col">See User Details </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="c :${customer}">
+                    <td th:text="${c.customerId}"></td>
+                    <td th:text="${c.tc}"></td>
+                    <td style="width: 112px;" th:text="${c.birth}"></td>
+                    <td th:text="${c.email}"></td>
+                    <td th:text="${c.firstname}"></td>
+                    <td th:text="${c.lastname}"></td>
+                    <td th:text="${c.province}"></td>
+                    <td th:text="${c.district}"></td>
+                    <td><a th:href="@{/selectType(customerId=${c.customerId})}"><span
+                                class="badge text-bg-primary">Add New Insurance</span></a></td>
+                    <td><button class="mx-auto"><a
+                                th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i
+                                    class="bx bxs-edit edit"></i></a></button></td>
+                    <td><button class="mx-auto"><a
+                                th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i
+                                    class="bx bx-trash trash"></i></a></button></td>
+                    <td><button class="mx-auto">
+                            <a th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
+                                <i class='bx bx-dots-horizontal-rounded dots'></i>
+                            </a>
+                        </button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+</div>
+</div>
+</div>
 					</div>
 				</div>
 			</div>
