--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>User Page</title>
-	<link rel="icon" type="image/x-icon" th:href="@{/img/Happy-favicon.png}" href="/src/main/resources/static/img/Happy-favicon.png">
+	<link rel="icon" type="image/x-icon" th:href="@{/img/Happy-favicon.png}"
+		href="/src/main/resources/static/img/Happy-favicon.png">
 	<!-- Bootsrapt -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
@@ -25,8 +26,9 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container-fluid px-5">
 			<a class="navbar-brand" href="#">
-                    <img th:src="@{/img/Happy-Logo.png}" src="/src/main/resources/static/img/Happy-Logo.png" alt="happyLogo" class="rounded img-fluid" style="width: 150px;">
-          	</a>
+				<img th:src="@{/img/Happy-Logo.png}" src="/src/main/resources/static/img/Happy-Logo.png" alt="happyLogo"
+					class="rounded img-fluid" style="width: 150px;">
+			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
@@ -62,7 +64,7 @@
 	</nav>
 	<!--	End Navbar-->
 
-	<!--Modal-->
+	<!--Taxes Modal-->
 	<div id="myModal" class="modal fade" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
@@ -111,6 +113,68 @@
 		var homeKdv = /*[[${homeKdv}]]*/ {};
 		var healthKdv = /*[[${healthKdv}]]*/ {};
 	</script>
+	
+	<!-- Modal -->
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5 text-center w-100" id="staticBackdropLabel">Balance Sheet Details</h1>
+          <button type="button" class="btn-close m-0" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <div class="row">
+                <ul class="list-unstyled">
+                  <li class="text-muted"><span class="text-black">Company Name:</span> AXA</li>
+                  <li class="text-muted mt-1"><span class="text-black">Date:</span> April 17 2021</li>
+                </ul>
+                <hr>
+                <div class="col-xl-10">
+                  <p>Car Insurance Total</p>
+                </div>
+                <div class="col-xl-2">
+                  <p class="float-end">$199.00
+                  </p>
+                </div>
+                <hr>
+              </div>
+              <div class="row">
+                <div class="col-xl-10">
+                  <p>Home Insurance Total</p>
+                </div>
+                <div class="col-xl-2">
+                  <p class="float-end">$100.00
+                  </p>
+                </div>
+                <hr>
+              </div>
+              <div class="row">
+                <div class="col-xl-10">
+                  <p>Health Insurance Total</p>
+                </div>
+                <div class="col-xl-2">
+                  <p class="float-end">$10.00
+                  </p>
+                </div>
+                <hr style="border: 2px solid black;">
+              </div>
+              <div class="row text-black">
+        
+                <div class="col-xl-12">
+                  <p class="float-end fw-bold">Total: $10.00
+                  </p>
+                </div>
+                <hr style="border: 2px solid black;">
+              </div>
+            
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Understood</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 	<div class="user-page-wrapper">
 		<div class="user-page-main pt-5">
@@ -131,170 +195,136 @@
 				<div class="user-insurances-admin">
 					<div class="card mb-4">
 						<ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="health-tab" data-bs-toggle="tab"
-            data-bs-target="#health-tab-pane" type="button" role="tab"
-            aria-controls="health-tab-pane" aria-selected="true">All Customer</button>
-    </li>
-    <li class="nav-item" role="presentation">
-        <button class="nav-link" id="home-tab" data-bs-toggle="tab"
-            data-bs-target="#home-tab-pane" type="button" role="tab"
-            aria-controls="home-tab-pane" aria-selected="false">All Insurance</button>
-    </li>
-    <li class="nav-item" role="presentation">
-        <button class="nav-link" id="car-tab" data-bs-toggle="tab"
-            data-bs-target="#car-tab-pane" type="button" role="tab" aria-controls="car-tab-pane"
-            aria-selected="false">All Company</button>
-    </li>
-</ul>
-<div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="health-tab-pane" role="tabpanel"
-        aria-labelledby="health-tab" tabindex="0">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">TC</th>
-                    <th scope="col">Birth Date</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">First Name</th>
-                    <th cope="col">Last Name</th>
-                    <th cope="col">Province</th>
-                    <th cope="col">District</th>
-                    <th scope="col">Insurance Type</th>
-                    <th scope="col">Update</th>
-                    <th scope="col">Delete</th>
-                    <th scope="col">See User Details </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="c :${customer}">
-                    <td th:text="${c.customerId}"></td>
-                    <td th:text="${c.tc}"></td>
-                    <td style="width: 112px;" th:text="${c.birth}"></td>
-                    <td th:text="${c.email}"></td>
-                    <td th:text="${c.firstname}"></td>
-                    <td th:text="${c.lastname}"></td>
-                    <td th:text="${c.province}"></td>
-                    <td th:text="${c.district}"></td>
-                    <td><a th:href="@{/selectType(customerId=${c.customerId})}"><span
-                                class="badge text-bg-primary">Add New Insurance</span></a></td>
-                    <td><button class="mx-auto"><a
-                                th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i
-                                    class="bx bxs-edit edit"></i></a></button></td>
-                    <td><button class="mx-auto"><a
-                                th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i
-                                    class="bx bx-trash trash"></i></a></button></td>
-                    <td><button class="mx-auto">
-                            <a th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
-                                <i class='bx bx-dots-horizontal-rounded dots'></i>
-                            </a>
-                        </button></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+							<li class="nav-item" role="presentation">
+								<button class="nav-link active" id="health-tab" data-bs-toggle="tab"
+									data-bs-target="#health-tab-pane" type="button" role="tab"
+									aria-controls="health-tab-pane" aria-selected="true">All Customer</button>
+							</li>
+							<li class="nav-item" role="presentation">
+								<button class="nav-link" id="home-tab" data-bs-toggle="tab"
+									data-bs-target="#home-tab-pane" type="button" role="tab"
+									aria-controls="home-tab-pane" aria-selected="false">All Insurance</button>
+							</li>
+							<li class="nav-item" role="presentation">
+								<button class="nav-link" id="car-tab" data-bs-toggle="tab"
+									data-bs-target="#car-tab-pane" type="button" role="tab" aria-controls="car-tab-pane"
+									aria-selected="false">All Company</button>
+							</li>
+						</ul>
+						<div class="tab-content" id="myTabContent">
+							<div class="tab-pane fade show active" id="health-tab-pane" role="tabpanel"
+								aria-labelledby="health-tab" tabindex="0">
+								<table class="table">
+									<thead>
+										<tr>
+											<th scope="col">Id</th>
+											<th scope="col">TC</th>
+											<th scope="col">Birth Date</th>
+											<th scope="col">Email</th>
+											<th scope="col">First Name</th>
+											<th cope="col">Last Name</th>
+											<th cope="col">Province</th>
+											<th cope="col">District</th>
+											<th scope="col">Insurance Type</th>
+											<th scope="col">Update</th>
+											<th scope="col">Delete</th>
+											<th scope="col">See User Details </th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr th:each="c :${customer}">
+											<td th:text="${c.customerId}"></td>
+											<td th:text="${c.tc}"></td>
+											<td style="width: 112px;" th:text="${c.birth}"></td>
+											<td th:text="${c.email}"></td>
+											<td th:text="${c.firstname}"></td>
+											<td th:text="${c.lastname}"></td>
+											<td th:text="${c.province}"></td>
+											<td th:text="${c.district}"></td>
+											<td><a th:href="@{/selectType(customerId=${c.customerId})}"><span
+														class="badge text-bg-primary">Add New Insurance</span></a></td>
+											<td><button class="mx-auto"><a
+														th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i
+															class="bx bxs-edit edit"></i></a></button></td>
+											<td><button class="mx-auto"><a
+														th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i
+															class="bx bx-trash trash"></i></a></button></td>
+											<td><button class="mx-auto">
+													<a th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
+														<i class='bx bx-dots-horizontal-rounded dots'></i>
+													</a>
+												</button></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 
-    <div class="tab-pane fade" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
-        tabindex="0">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">TC</th>
-                    <th scope="col">Birth Date</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">First Name</th>
-                    <th cope="col">Last Name</th>
-                    <th cope="col">Province</th>
-                    <th cope="col">District</th>
-                    <th scope="col">Insurance Type</th>
-                    <th scope="col">Update</th>
-                    <th scope="col">Delete</th>
-                    <th scope="col">See User Details </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="c :${customer}">
-                    <td th:text="${c.customerId}"></td>
-                    <td th:text="${c.tc}"></td>
-                    <td style="width: 112px;" th:text="${c.birth}"></td>
-                    <td th:text="${c.email}"></td>
-                    <td th:text="${c.firstname}"></td>
-                    <td th:text="${c.lastname}"></td>
-                    <td th:text="${c.province}"></td>
-                    <td th:text="${c.district}"></td>
-                    <td><a th:href="@{/selectType(customerId=${c.customerId})}"><span
-                                class="badge text-bg-primary">Add New Insurance</span></a></td>
-                    <td><button class="mx-auto"><a
-                                th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i
-                                    class="bx bxs-edit edit"></i></a></button></td>
-                    <td><button class="mx-auto"><a
-                                th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i
-                                    class="bx bx-trash trash"></i></a></button></td>
-                    <td><button class="mx-auto">
-                            <a th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
-                                <i class='bx bx-dots-horizontal-rounded dots'></i>
-                            </a>
-                        </button></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="tab-pane fade" id="car-tab-pane" role="tabpanel" aria-labelledby="car-tab"
-        tabindex="0">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">TC</th>
-                    <th scope="col">Birth Date</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">First Name</th>
-                    <th cope="col">Last Name</th>
-                    <th cope="col">Province</th>
-                    <th cope="col">District</th>
-                    <th scope="col">Insurance Type</th>
-                    <th scope="col">Update</th>
-                    <th scope="col">Delete</th>
-                    <th scope="col">See User Details </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="c :${customer}">
-                    <td th:text="${c.customerId}"></td>
-                    <td th:text="${c.tc}"></td>
-                    <td style="width: 112px;" th:text="${c.birth}"></td>
-                    <td th:text="${c.email}"></td>
-                    <td th:text="${c.firstname}"></td>
-                    <td th:text="${c.lastname}"></td>
-                    <td th:text="${c.province}"></td>
-                    <td th:text="${c.district}"></td>
-                    <td><a th:href="@{/selectType(customerId=${c.customerId})}"><span
-                                class="badge text-bg-primary">Add New Insurance</span></a></td>
-                    <td><button class="mx-auto"><a
-                                th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i
-                                    class="bx bxs-edit edit"></i></a></button></td>
-                    <td><button class="mx-auto"><a
-                                th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i
-                                    class="bx bx-trash trash"></i></a></button></td>
-                    <td><button class="mx-auto">
-                            <a th:href="@{'/userPage/' + ${c.username} + '/' + ${'admin'}}">
-                                <i class='bx bx-dots-horizontal-rounded dots'></i>
-                            </a>
-                        </button></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-</div>
-</div>
-</div>
+							<div class="tab-pane fade" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
+								tabindex="0">
+								<table class="table">
+									<thead>
+										<tr>
+											<th scope="col">Insurance Id</th>
+											<th scope="col">Insurance Type</th>
+											<th scope="col">Customer Id</th>
+											<th scope="col">Car/Home/Health Id</th>
+											<th scope="col">Company Id</th>
+											<th cope="col">KDV</th>
+											<th cope="col">Offer</th>
+											<th cope="col">Result</th>
+											<th scope="col">Start Date</th>
+											<th scope="col">End Date</th>
+											<th scope="col">Days Diff</th>
+											<th scope="col">Refund</th>
+											<th scope="col">Status</th>
+											<th scope="col">Period</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr th:each="row : ${allInsurances}">
+											<td th:each="column : ${row}" th:text="${column}"></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+							<div class="tab-pane fade" id="car-tab-pane" role="tabpanel" aria-labelledby="car-tab"
+								tabindex="0">
+								<table class="table">
+									<thead>
+										<tr>
+											<th scope="col">Company Id</th>
+											<th scope="col">Company Name</th>
+											<th scope="col">Country</th>
+											<th scope="col">District</th>
+											<th scope="col">Phone Number</th>
+											<th cope="col">Email</th>
+											<th cope="col">Service Fee</th>
+											<th scope="col">See Company Details </th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr th:each="company :${company}">
+											<td th:text="${company.companyId}"></td>
+											<td th:text="${company.name}"></td>
+											<td th:text="${company.country}"></td>
+											<td th:text="${company.city}"></td>
+											<td th:text="${company.phoneNumber}"></td>
+											<td th:text="${company.email}"></td>
+											<td th:text="${company.serviceFee}"></td>
+											<td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+													Launch static backdrop modal </button></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+	</div>
+	</div>
 	</div>
 	</div>
 
